--- a/src/views/contract/y-contract/add.html
+++ b/src/views/contract/y-contract/add.html
@@ -455,7 +455,12 @@
                             <input type="text" class="layui-input" id="accounts" name="accounts" placeholder="选填">
                         </div>
                     </div>
-                    
+                    <div class="layui-inline">
+                            <label class="layui-form-label">支行</label>
+                            <div class="layui-input-inline" style="width:200px;">
+                                <input type="text" class="layui-input" id="subbranch" name="subbranch" placeholder="选填">
+                            </div>
+                     </div>
                 </div>
                 
                 <fieldset class="layui-elem-field layui-field-title">
