--- a/src/views/contract/y-contract/edit.html
+++ b/src/views/contract/y-contract/edit.html
@@ -518,7 +518,12 @@
                                 <input type="text" class="layui-input" value="{{doc.ns(d[1].accounts)}}" id="accounts" name="accounts" placeholder="选填">
                             </div>
                         </div>
-                        
+                        <div class="layui-inline">
+                                <label class="layui-form-label">支行</label>
+                                <div class="layui-input-inline" style="width:200px;">
+                                    <input type="text" class="layui-input" value="{{doc.ns(d[1].subbranch)}}" id="subbranch" name="subbranch" placeholder="选填">
+                                </div>
+                            </div>
                     </div>
                 <fieldset class="layui-elem-field layui-field-title">
                     <legend>合同信息</legend>
