--- a/src/views/house/rz/add.html
+++ b/src/views/house/rz/add.html
@@ -26,7 +26,7 @@
                 <div class="layui-inline">
                     <label class="layui-form-label" style="width:auto;">操作内容</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="content" lay-verify="required" autocomplete="off" class="layui-input" placeholder="操作内容" id="content">
+                            <textarea name="content" placeholder="请输入内容" class="layui-textarea"></textarea>
                     </div>
                 </div>
                 
