--- a/src/views/house/z-house/edit.html
+++ b/src/views/house/z-house/edit.html
@@ -505,6 +505,12 @@ img {
               
     
             </div>
+            <div class="layui-form-item"> 
+                    <label class="layui-form-label">备注</label> 
+                    <div class="layui-input-inline"> 
+                            <textarea name="Remarks" style="width:380px;"  placeholder="请输入内容" class="layui-textarea">{{d[1].Remarks}}</textarea>
+                    </div> 
+            </div>
             <div class="title"> 
                     <h3 class="red"> 图片信息</h3> 
                    </div> 
