--- a/src/views/contract/y-contract/add.html
+++ b/src/views/contract/y-contract/add.html
@@ -22,6 +22,7 @@
                 var jQuery=layui.jquery;
                 var form = layui.form;
                 var mymod = layui.htcsradio;
+                var laydate = layui.laydate;
                 debugger;
                 var alldata=[];
                 doc.objectQuery(url, { }, function (data) {
@@ -54,7 +55,7 @@
                     //验证规则
                     Create();
                     EventOther();
-                    
+                    initrecentfree();
                     form.render('');
                     });
                     
@@ -316,6 +317,19 @@
         debugger;
         var zafeilist = [];
         var yajin=[];
+        //免租期
+        var arr=[];
+        $(".rentfreerow").each(function(index,value){
+                  var field={};
+                  var domBegin=$(value).children().find('.Begin');
+                  var domEnd=$(value).children().find('.End');
+                  var domAmount=$(value).children().find('.Amount');
+                  field.Begin=domBegin.val();
+                  field.End=domEnd.val();
+                  field.Amount=domAmount.val();
+                  arr.push(field);
+        });
+
         //杂费
         $.each($(".zafeicontent .zafeilist"), function (index, item) {
         debugger;
@@ -358,7 +372,7 @@
         "BeginTime": datafield.BeginTime, "EndTime": datafield.EndTime, "Type": datafield.Type,"CreateTime":datafield.CreateTime,"CreatePerson":datafield.CreatePerson,  "PinLv": datafield.PinLv, "FirstPay": datafield.FirstPay,"DepositType":datafield.DepositType, "Recent": datafield.Recent,"PayType":datafield.PayType,"DayRecnet":datafield.DayRecnet,"Remark":datafield.Remark,"HouseId":datafield.HouseId,
         "HouseType":datafield.HouseType,"BeforeDay":datafield.BeforeDay,"Recivetype":datafield.Recivetype,"payee": datafield.payee,"bank": datafield.bank,"accounts": datafield.accounts,
         "Teant": { "Name": datafield.Name, "Sex": datafield.Sex, "BatethDay": datafield.BatethDay, "Phone": datafield.Phone, "Social": datafield.Social, "Work": datafield.Work, "Hobby": datafield.Hobby, "DocumentType": datafield.DocumentType,"Document": datafield.Document,"Zidcard":datafield.zjImage  },
-        "Otherfee": zafeilist,"Yajin":yajin,"Status":2,"DepositType":datafield.DepositType, "Enclosure":datafield.Image
+        "Otherfee": zafeilist,"Yajin":yajin,"Status":2,"DepositType":datafield.DepositType, "Enclosure":datafield.Image,"tRentFree":arr
          };
          var url = doc.baseurl + "/api/Contract/SaveData";
          var saveoption={
@@ -375,7 +389,63 @@
       doc.Submit(saveoption);
       return false;
          });
+         function initrecentfree(){
+            event();
+               var dom= '<div class="layui-form-item rentfreerow"><div class="layui-inline"><div class="layui-input-inline" style="width:160px"><input type="tel" lay-verify="required" autocomplete="off" class="layui-input Begin"  placeholder="开始时间"></div></div><div class="layui-inline"><div class="layui-input-inline" style="width:160px"><input type="tel"   autocomplete="off"  class="layui-input End"  placeholder="结束时间"></div></div><div class="layui-inline"><div class="layui-input-inline" style="width:100px"><input type="tel"  lay-verify="required" autocomplete="off" class="layui-input Amount"  placeholder="减免金额"></div></div><div class="layui-inline"><button type="button" class="layui-btn layui-btn-primary layui-btn-sm delete" ><i class="layui-icon">&#xe640;</i></button></div></div>';
+               $("#add").click(function(){
+                 debugger;
+                 $(".wraprecent").append(dom);
+                 var len=$(".rentfreerow").length;
+                 $("#recentfree").val(len); 
+                 event();
+               });
                
+               form.on('select(recentfree)', function(data){
+                 debugger;
+                  var number=data.value;
+                  var len=$(".rentfreerow").length;
+                 
+                  if(number>len){
+                    var result=number-len;
+                   
+                    for (i = 0; i < result; i++) {
+                   
+                    $(".wraprecent").append(dom);
+                    
+                  }
+                  }
+                  if(number<len){
+                      var gtdom=':gt('+(number-1)+')';
+                       $(".rentfreerow").filter(gtdom).remove()
+                  }
+                  if(number==0){
+                       $(".rentfreerow").remove()
+                  }
+                  event();
+               });  
+               function event(){
+               
+                $('.Begin').each(function(){
+                  laydate.render({
+                 elem:this
+                });
+                }) 
+                $('.End').each(function(){
+                  laydate.render({
+                  elem:this
+                });
+                }) 
+                $(".delete").click(function(){
+                 debugger;
+                 var dom= $(this).parent().parent('.rentfreerow');
+                 dom.remove();
+                 var len=$(".rentfreerow").length;
+                 $("#recentfree").val(len); 
+                 form.render('');  
+                })
+                form.render('');  
+               }  
+}   
         });
       }
       function complteimg(name,type, number){
@@ -515,12 +585,37 @@
                     </div>
                 </div>
                 <div class="layui-form-item">
-                        <label class="layui-form-label" style="text-align:left;width:auto;">免租期</label> 
-                        <div class="layui-input-inline" style="width:auto;" >
-                                <input type="text" name="RentFree" autocomplete="off"  lay-verify="required|number"   class="layui-input"  /> 
+                        <div class="layui-inline">
+                            <label class="layui-form-label">免租期</label>
+                            <div class="layui-input-inline" style="width:200px;">
+                                <select lay-verify="required"  lay-filter="recentfree" id="recentfree">
+                                    <option value="0">无</option>
+                                    <option value="1">1段免租期</option>
+                                    <option value="2">2段免租期</option>
+                                    <option value="3">3段免租期</option>
+                                    <option value="4">4段免租期</option>
+                                    <option value="5">5段免租期</option>
+                                    <option value="6">6段免租期</option>
+                                    <option value="7">7段免租期</option>
+                                    <option value="8">8段免租期</option>
+                                    <option value="9">9段免租期</option>
+                                    <option value="10">10段免租期</option>
+                                    <option value="11">11段免租期</option>
+                                    <option value="12">12段免租期</option>
+                                    <option value="13">13段免租期</option>
+                                    <option value="14">14段免租期</option>
+                                </select>
+                            </div>                       
                         </div>
-                        
-                </div>
+                        <div class="layui-inline">
+                            <button type="button" class="layui-btn layui-btn-primary layui-btn-sm" id="add">
+                                <i class="layui-icon">&#xe654;</i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="wraprecent">
+                       
+                    </div>
                       <div class="layui-form-item">
                       <label class="layui-form-label">常规押金</label>
                       <div class="layui-input-inline" style="width: 100px;">
@@ -590,7 +685,7 @@
                 <div class="layui-form-item">
                      <label class="layui-form-label">杂费</label>
                      <div class="layui-input-block">
-                            {{#  layui.each(d.zafei, function(index, item1){ if(item1.IsYajin==0){ }}
+                            {{#  layui.each(d[0].zafei, function(index, item1){ if(item1.IsYajin==0){ }}
                                 <input type="checkbox" name="{{item1.Code}}" title="{{item1.Name}}" lay-filter="zafei" ztype="{{item1.Type}}" zyajin="{{item1.IsYajin}}">
                             {{# } });   }}
                         </div>
