--- a/src/views/contract/y-contract/edit.html
+++ b/src/views/contract/y-contract/edit.html
@@ -110,6 +110,8 @@
                     Create();
                     //杂费事件
                     EventOther();
+                    //免租期事件
+                    initrecentfreevalue(alldata[1].tRentFree);
                 }); 
             }); 
                 });
@@ -381,6 +383,18 @@
             debugger;
         var zafeilist = [];
         var yajin=[];
+          //免租期
+        var arr=[];
+        $(".rentfreerow").each(function(index,value){
+                  var field={};
+                  var domBegin=$(value).children().find('.Begin');
+                  var domEnd=$(value).children().find('.End');
+                  var domAmount=$(value).children().find('.Amount');
+                  field.Begin=domBegin.val();
+                  field.End=domEnd.val();
+                  field.Amount=domAmount.val();
+                  arr.push(field);
+        });
         $.each($(".zafeicontent .zafeilist"), function (index, item) {
         var id = "#" + item.id;
         var zafei = {};
@@ -421,7 +435,7 @@
         "BeginTime": datafield.BeginTime, "EndTime": datafield.EndTime,"CreateTime":datafield.CreateTime,"CreatePerson":datafield.CreatePerson, "Type": datafield.Type, "PinLv": datafield.PinLv, "FirstPay": datafield.FirstPay,"DepositType":datafield.DepositType, "Recent": datafield.Recent,"PayType":datafield.PayType,"DayRecnet":datafield.DayRecnet,"Remark":datafield.Remark,"HouseId":datafield.HouseId,
         "HouseType":datafield.HouseType,"BeforeDay":datafield.BeforeDay,"Recivetype":datafield.Recivetype,"payee": datafield.payee,"bank": datafield.bank,"accounts": datafield.accounts,
         "Teant": { "Name": datafield.Name, "Sex": datafield.Sex, "BatethDay": datafield.BatethDay, "Phone": datafield.Phone, "Social": datafield.Social, "Work": datafield.Work, "Hobby": datafield.Hobby, "DocumentType": datafield.DocumentType,"Document": datafield.Document,"Zidcard":datafield.zjImage  },
-        "Otherfee": zafeilist,"Yajin":yajin,"Status":2,"DepositType":datafield.DepositType, "Enclosure":datafield.Image
+        "Otherfee": zafeilist,"Yajin":yajin,"Status":2,"DepositType":datafield.DepositType, "Enclosure":datafield.Image,"tRentFree":arr
          };
          var url = doc.baseurl + "/api/Contract/SaveData";
          var saveoption={
@@ -438,7 +452,80 @@
       doc.Submit(saveoption);
       return false;
          });
+         function initrecentfreevalue(arr){
+             $.each(arr,function(index,value){
+                var dom= '<div class="layui-form-item rentfreerow" id="'+"idfield"+index+'"><div class="layui-inline"><div class="layui-input-inline" style="width:160px"><input type="tel" lay-verify="required" autocomplete="off" class="layui-input Begin"  placeholder="开始时间"></div></div><div class="layui-inline"><div class="layui-input-inline" style="width:160px"><input type="tel"   autocomplete="off"  class="layui-input End"  placeholder="结束时间"></div></div><div class="layui-inline"><div class="layui-input-inline" style="width:100px"><input type="tel"  lay-verify="required" autocomplete="off" class="layui-input Amount"  placeholder="减免金额"></div></div><div class="layui-inline"><button type="button" class="layui-btn layui-btn-primary layui-btn-sm delete" ><i class="layui-icon">&#xe640;</i></button></div></div>';
+                debugger;
+                 $(".wraprecent").append(dom);
+                 //赋值
+                 var id="#idfield"+index;
+                 $(id+" .Begin").val(util.toDateString(value.Begin.replace(/-/g, '/'), 'yyyy-MM-dd'));
+                 $(id+" .End").val(util.toDateString(value.End.replace(/-/g, '/'), 'yyyy-MM-dd'));
+                 $(id+" .Amount").val(value.Amount);
+                 var len=$(".rentfreerow").length;
+                 $("#recentfree").val(len); 
+                 event();     
+             })
+             initrecentfree();
+         }
+         function initrecentfree(){
+               event();
+               var dom= '<div class="layui-form-item rentfreerow"><div class="layui-inline"><div class="layui-input-inline" style="width:160px"><input type="tel" lay-verify="required" autocomplete="off" class="layui-input Begin"  placeholder="开始时间"></div></div><div class="layui-inline"><div class="layui-input-inline" style="width:160px"><input type="tel"   autocomplete="off"  class="layui-input End"  placeholder="结束时间"></div></div><div class="layui-inline"><div class="layui-input-inline" style="width:100px"><input type="tel"  lay-verify="required" autocomplete="off" class="layui-input Amount"  placeholder="减免金额"></div></div><div class="layui-inline"><button type="button" class="layui-btn layui-btn-primary layui-btn-sm delete" ><i class="layui-icon">&#xe640;</i></button></div></div>';
+               $("#add").click(function(){
+                 debugger;
+                 $(".wraprecent").append(dom);
+                 var len=$(".rentfreerow").length;
+                 $("#recentfree").val(len); 
+                 event();
+               });
                
+               form.on('select(recentfree)', function(data){
+                 debugger;
+                  var number=data.value;
+                  var len=$(".rentfreerow").length;
+                 
+                  if(number>len){
+                    var result=number-len;
+                   
+                    for (i = 0; i < result; i++) {
+                   
+                    $(".wraprecent").append(dom);
+                    
+                  }
+                  }
+                  if(number<len){
+                      var gtdom=':gt('+(number-1)+')';
+                       $(".rentfreerow").filter(gtdom).remove()
+                  }
+                  if(number==0){
+                       $(".rentfreerow").remove()
+                  }
+                  event();
+               });  
+                
+}      
+function event(){
+               
+               $('.Begin').each(function(){
+                 laydate.render({
+                elem:this
+               });
+               }) 
+               $('.End').each(function(){
+                 laydate.render({
+                 elem:this
+               });
+               }) 
+               $(".delete").click(function(){
+                debugger;
+                var dom= $(this).parent().parent('.rentfreerow');
+                dom.remove();
+                var len=$(".rentfreerow").length;
+                $("#recentfree").val(len); 
+                form.render('');  
+               })
+               form.render('');  
+              }
         });
       }
       function complteimg(name,type, number){
@@ -565,13 +652,41 @@
                         <div class="layui-input-inline" style="width: 100px;">
                             <input type="tel" name="Recent" lay-verify="required|number" autocomplete="off" value="{{d[1].Recent}}" class="layui-input Recent" id="Recent">
                         </div>
-                        <label class="layui-form-label" style="text-align:left;width:auto;">免租期</label> 
-                        <div class="layui-input-inline" style="width:auto;" >
-                            <input type="text" name="RentFree" autocomplete="off"  value="{{doc.ns(d[1].RentFree)}}"    class="layui-input"  /> 
-                        </div>
+                    
                     </div>
                 </div>
-                
+                <div class="layui-form-item">
+                        <div class="layui-inline">
+                            <label class="layui-form-label">免租期</label>
+                            <div class="layui-input-inline" style="width:200px;">
+                                <select lay-verify="required"  lay-filter="recentfree" id="recentfree">
+                                    <option value="0">无</option>
+                                    <option value="1">1段免租期</option>
+                                    <option value="2">2段免租期</option>
+                                    <option value="3">3段免租期</option>
+                                    <option value="4">4段免租期</option>
+                                    <option value="5">5段免租期</option>
+                                    <option value="6">6段免租期</option>
+                                    <option value="7">7段免租期</option>
+                                    <option value="8">8段免租期</option>
+                                    <option value="9">9段免租期</option>
+                                    <option value="10">10段免租期</option>
+                                    <option value="11">11段免租期</option>
+                                    <option value="12">12段免租期</option>
+                                    <option value="13">13段免租期</option>
+                                    <option value="14">14段免租期</option>
+                                </select>
+                            </div>                       
+                        </div>
+                        <div class="layui-inline">
+                            <button type="button" class="layui-btn layui-btn-primary layui-btn-sm" id="add">
+                                <i class="layui-icon">&#xe654;</i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="wraprecent">
+                       
+                    </div>
                       <div class="layui-form-item">
                       <label class="layui-form-label">常规押金</label>
                       <div class="layui-input-inline" style="width: 100px;">
