--- a/src/views/house/z-house/InterView.html
+++ b/src/views/house/z-house/InterView.html
@@ -645,6 +645,12 @@ function formatterzhouqi(value) {
                                             </div> 
                                     </div> 
                                 </div>   
+                                <div class="layui-form-item"> 
+                                        <label class="layui-form-label">备注</label> 
+                                        <div class="layui-input-inline"> 
+                                                <textarea name="Remarks" disabled style="width:380px;"  placeholder="请输入内容" class="layui-textarea gray">{{d[1].Remarks}}</textarea>
+                                        </div> 
+                                </div>
                                <div class="title"> 
                                 <h3 class="red"> 图片信息</h3> 
                                </div>
