--- a/src/views/house/z-house/add.html
+++ b/src/views/house/z-house/add.html
@@ -535,6 +535,12 @@ img {
                  </div>
                 </div>
              </div> 
+             <div class="layui-form-item"> 
+                    <label class="layui-form-label">备注</label> 
+                    <div class="layui-input-inline"> 
+                            <textarea name="Remarks" style="width:380px;"  placeholder="请输入内容" class="layui-textarea"></textarea>
+                    </div> 
+            </div>
              <div class="title"> 
               <h3 class="red"> 图片信息</h3> 
              </div> 
