--- a/src/views/guest/index.html
+++ b/src/views/guest/index.html
@@ -68,11 +68,10 @@
     </script>
     <div class="layui-tab layui-tab-card" lay-filter="tabletab">
         <ul class="layui-tab-title" style="margin-bottom:0;">
-            <li value="0" class="layui-this">所有</li>
-            <li value="1">待分配</li>
+            <li value="1" class="layui-this">待分配</li>
             <li value="2">跟进中</li>
             <li value="3">已完成</li>
-            
+            <li value="0" >所有</li>
         </ul>
         <div class="layui-tab-content" style="padding:0px;margin:0px;">
             <table id="guest-main-table" lay-filter="demoEvent"></table>
