--- a/src/views/house/z-house/InterView.html
+++ b/src/views/house/z-house/InterView.html
@@ -111,7 +111,7 @@
                shade: .1,
                shadeClose: true,
                maxmin: true,
-               area: ['1120px', '90%'],
+               area: ['70%', '90%'],
                success: function (layero, index) {
                 view1("domedit1").render('house/z-house/edit', {
                        id: id,
