--- a/src/views/msystem/department/distribution.html
+++ b/src/views/msystem/department/distribution.html
@@ -10,7 +10,7 @@
       function LoadData(id,tableid,layerindex){
         layui.extend({
         	tablePlug: '{/}layui/lay/plug/tablePlug'
-        }).use(['laypage', 'layer', 'laytpl', 'jquery', 'form', 'setter', 'tablePlug'], function () {
+        }).use(['laypage', 'layer', 'laytpl', 'jquery', 'form', 'setter', 'tablePlug', 'multiSelect','htcsLG'], function () {
         	var setter = layui.setter;
     		var baseurl = setter.baseurl;
             var laytpl = layui.laytpl;
@@ -22,7 +22,131 @@
             var submitUrl = "api/Procedure/distributiondepart";
             var doc = layui.htcsLG;
             var tablePlug = layui.tablePlug;
+            var util = layui.util;
+            var $form = $('form');
+            var laydate = layui.laydate;
+            var multiSelect = layui.multiSelect;
+            debugger;
+            //三级联动数据
+            var leftFilter = {
+            currentProvince: '',
+            currentCity: '',
+            currentArea: '',
+            provinceOptions: [],
+            cityOptions: [],
+            areaOptions: [],
+            provinceList: [],
+            cityList: [],
+            areaList: []
+        }
+        var filterUrl = 'api/Formatter/QueryPCCell1';
+        initFilter();
+        function initFilter(){
+        doc.objectQuery(filterUrl, {"Type": '0'}, function (data) {
+          var provinceList = data.numberData;
+          var cityList = [];
+          var provinceOptions = [];
+          var currentProvince = leftFilter.currentProvince;
+          for (var i in provinceList) {
+              cityList = provinceList[i].mallCityList; 
+              provinceOptions.push('<option value="'+ provinceList[i].provinceName +'">'+ provinceList[i].provinceName +'</option>');
+          }
+          leftFilter.provinceOptions = provinceOptions;
+          leftFilter.cityList = cityList;
+          leftFilter.provinceList = provinceList;
+          selectProvince();
+          $('select[name="CityName"]').append(leftFilter.provinceOptions.join(''));
+          $('select[name="AreaName"]').append(leftFilter.cityOptions.join(''));
+          form.render('');
+      })
+    }
 
+    form.on('select(CityName)', function (data) {
+        leftFilter.currentProvince = data.value;
+        for (let i in leftFilter.provinceList) {
+            if (leftFilter.currentProvince === leftFilter.provinceList[i].provinceName) {
+                leftFilter.cityList = leftFilter.provinceList[i].mallCityList;
+            }
+        }
+        selectProvince();
+        $('select[name="AreaName"]').html(leftFilter.cityOptions.join(''));
+        form.render('');
+        $('#zcontract-search-form button[lay-filter="searchply"]').click();
+    })
+
+    form.on('select(AreaName)', function (data) {
+        debugger;
+        leftFilter.currentCity = data.value;
+        for (let i in leftFilter.cityList) {
+            if (leftFilter.currentCity === leftFilter.cityList[i].cityName) {
+                leftFilter.areaList = leftFilter.cityList[i].mallAreaList;
+            }
+        }
+        selectCity();
+        $('select[name="CellName2"]').html(leftFilter.areaOptions.join(''));
+        form.render('');
+        debugger;
+        multiSelect.init(); 
+        $('#zcontract-search-form button[lay-filter="searchply"]').click();
+    })
+
+    form.on('select(CellName)', function (data) {
+      debugger;
+      var vals = []
+      $('.layui-form-checked span').each(function() {
+        vals.push($(this).text());
+      })
+      $('#CellName').val(vals.join(','));
+      $('#zcontract-search-form button[lay-filter="searchply"]').click();
+    })
+    form.on('select(storename)', function (data) {
+      debugger;
+      $('#zcontract-search-form button[lay-filter="searchply"]').click();
+    })
+    
+    form.on('submit(searchply)', function(data) {
+       debugger;
+       var search = JSON.parse(JSON.stringify(data.field));
+       table.reload("distribution-table", { where: search });
+       return false;
+    });
+    function selectProvince () {
+            var provinceList = leftFilter.provinceList;
+            var currentProvince =  leftFilter.currentProvince;
+            var cityList = leftFilter.cityList;
+            var cityOptions = [];
+            var currentCity = '';
+            var areaList = [];
+            areaList = getAreaList();
+            cityOptions.push('<option value="">请选择</option>');
+            for (var i in cityList) {
+                cityOptions.push('<option value="'+ cityList[i].cityName +'">'+ cityList[i].cityName +'</option>')
+            }
+            leftFilter.areaList = areaList;
+            leftFilter.cityOptions = cityOptions;
+            selectCity();
+    }
+
+    function getAreaList () {
+            var cityList = leftFilter.cityList;
+            var areaList = [];
+            for (var i in cityList) {
+                areaList = [].concat(areaList, cityList[i].mallAreaList || []);
+            }
+            return areaList;
+    }
+
+    function selectCity () {
+            var areaList = leftFilter.areaList;
+            var cityList = leftFilter.cityList;
+            var areaOptions = [];
+            var currentArea = '';
+            areaOptions.push('<option value="">请选择</option>');
+            for (var i in areaList) {
+                areaOptions.push('<option value="'+ areaList[i].areaName +'">'+ areaList[i].areaName +'</option>')
+            }
+            leftFilter.areaOptions = areaOptions;
+    }
             var cols=[[ //表头
                  { type: 'checkbox'}
                 ,{ field: 'id', width: 80, title: '编号' }
@@ -43,7 +167,7 @@
             	height: 'full-220',
             	method: 'post',
             	toolbar: '#toolbarDemo',
-            	where: {
+            	where: { 
             		"access_token": layui.data('layuiAdmin').access_token
             	},
             	request: {
@@ -146,7 +270,7 @@
 </script>
 <script type="text/html" template>
     {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex)}}
-</script>
+</script>·
 <script id="departdistributionscript" type="text/html">
 </script>
 <script type="text/html" id="toolbarDemo">
@@ -154,6 +278,50 @@
     <span class="layui-btn layui-btn-sm" lay-event="distribute">分配</span>
   </div>
 </script>
+<div class="m-search othersearch">
+        <form class="layui-form hcs-form" action=""  id="zcontract-search-form" lay-filter="searchply">
+                   <div class="m-search-item">
+                        <label class="layui-form-label" style="width: auto;">市</label>
+                        <div class="layui-input-inline" style="width: 120px;">
+                            <select lay-filter="CityName" name="CityName">
+                                <option value="">请选择</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="m-search-item">
+                        <label class="layui-form-label" style="width: auto;">区</label>
+                        <div class="layui-input-inline" style="width: 120px;">
+                            <select lay-filter="AreaName" name="AreaName">
+                                <option value="">请选择</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="m-search-item">
+                        <label class="layui-form-label" style="width: auto;">小区</label>
+                        <div class="layui-input-inline" style="width: 150px;">
+                            <select lay-filter="CellName" name="CellName2" multiple="multiple">
+                                <option value="">请选择</option>
+                            </select>
+                            <input type="hidden" name="CellNames" id="CellName">
+                        </div>
+                    </div>
+                    <div class="m-search-item">
+                            <select name="storename"  lay-filter="storename">
+                                    <option value="">分配状态</option>
+                                    <option value="未分配">未分配</option>
+                                    <option value="已分配">已分配</option>
+                             </select>
+                    </div>
+                    <div class="m-search-item" style="width:200px;">
+                            <input type="text" name="Content" autocomplete="off" class="layui-input" placeholder="房源,部门" >
+                   </div>
+                <div class="m-search-item">
+                    <button class="layui-btn" lay-submit="" lay-filter="searchply">搜索</button>
+                </div>
+            
+            <div style="clear:both;"></div>
+        </form>
+</div>
 <div id="depart-distribution-view" class="child-view form-wrapper">
     <table id="distribution-table" lay-filter="distribution-table"></table>
 </div>
